PUDE RECUPERAR MI TRABAJO CON REFLOG

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body style="background-image:url(./imagenes/tomorrowland.jpg);">
+<body>
     <header class="df-header">
         <div class="logo">
             <img src="./imagenes/logosoulmin.jpeg" alt="logo" class="logomin">
@@ -56,33 +56,30 @@
         <h3 class="titulomain">PROXIMOS EVENTOS</h3>
         <p class="titulomain">Estamos preparando cosas increibles, NO TE LO PIERDAS!</p>
         <div class="iframe">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/pV7DY-uE-PU"
+            <iframe src="https://www.youtube.com/embed/pV7DY-uE-PU"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Easqg4SUl2Q"
+            <iframe src="https://www.youtube.com/embed/Easqg4SUl2Q"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/iLsL-8PnDZ0"
+            <iframe src="https://www.youtube.com/embed/iLsL-8PnDZ0"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
         <div class="iframesc">
-            <iframe width="65%" height="500" scrolling="no" frameborder="no" allow="autoplay"
+            <iframe scrolling="no" frameborder="no" allow="autoplay" class="iframesc"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1277169400&color=%2304040a&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-            <div
-                style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                <a href="https://soundcloud.com/progressive_freq" title="Progressive Frequencies" target="_blank"
-                    style="color: #cccccc; text-decoration: none;"></a> · <a
+            <div>
+                <a href="https://soundcloud.com/progressive_freq" title="Progressive Frequencies" target="_blank"></a> · <a
                     href="https://soundcloud.com/progressive_freq/gustavo-cerati-puente-analog-jungs-remix-free-download"
-                    title="Gustavo Cerati - Puente (Analog Jungs Remix) [FREE DOWNLOAD]" target="_blank"
-                    style="color: #cccccc; text-decoration: none;"></a>
+                    title="Gustavo Cerati - Puente (Analog Jungs Remix) [FREE DOWNLOAD]" target="_blank"></a>
             </div>
         </div>
         <div class="titulomain">
-            <p>
+            <p class="infocontac">
                 <STRONG>INFORMACION Y CONTACTO</STRONG> <br>
                 Wilde, Avellaneda, CP:1875 <br>
                 Buenos Aires, Argentina
