aplicando algunos ajustes antes de la entrega

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" href="imagenes/favicon3/favicon.ico" type="image/x-icon">
     <title>Soul Frequencies</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,8 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,600;0,900;1,200;1,900&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/57729d5abd.js" crossorigin="anonymous"></script>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css">
     <link rel="apple-touch-icon" sizes="57x57" href="imagenes/favicon3/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="imagenes/favicon3/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="imagenes/favicon3/apple-icon-72x72.png">
@@ -56,16 +56,13 @@
         <h3 class="titulomain">PROXIMOS EVENTOS</h3>
         <p class="titulomain">Estamos preparando cosas increibles, NO TE LO PIERDAS!</p>
         <div class="iframe">
-            <iframe src="https://www.youtube.com/embed/pV7DY-uE-PU"
-                title="YouTube video player" frameborder="0"
+            <iframe src="https://www.youtube.com/embed/pV7DY-uE-PU" title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/Easqg4SUl2Q"
-                title="YouTube video player" frameborder="0"
+            <iframe src="https://www.youtube.com/embed/Easqg4SUl2Q" title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/iLsL-8PnDZ0"
-                title="YouTube video player" frameborder="0"
+            <iframe src="https://www.youtube.com/embed/iLsL-8PnDZ0" title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
@@ -73,8 +70,8 @@
             <iframe scrolling="no" frameborder="no" allow="autoplay" class="iframesc"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1277169400&color=%2304040a&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
             <div>
-                <a href="https://soundcloud.com/progressive_freq" title="Progressive Frequencies" target="_blank"></a> · <a
-                    href="https://soundcloud.com/progressive_freq/gustavo-cerati-puente-analog-jungs-remix-free-download"
+                <a href="https://soundcloud.com/progressive_freq" title="Progressive Frequencies" target="_blank"></a> ·
+                <a href="https://soundcloud.com/progressive_freq/gustavo-cerati-puente-analog-jungs-remix-free-download"
                     title="Gustavo Cerati - Puente (Analog Jungs Remix) [FREE DOWNLOAD]" target="_blank"></a>
             </div>
         </div>
@@ -83,7 +80,6 @@
                 <STRONG>INFORMACION Y CONTACTO</STRONG> <br>
                 Wilde, Avellaneda, CP:1875 <br>
                 Buenos Aires, Argentina
-
             </p>
         </div>
     </main>
@@ -103,7 +99,7 @@
             </a>
         </div>
     </footer>
-
+    <script src="https://kit.fontawesome.com/57729d5abd.js" crossorigin="anonymous"></script>
 </body>
 
 
