--- a/paginas/musica.html
+++ b/paginas/musica.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../main.css">
     <link rel="shortcut icon" href="../imagenes/favicon3/favicon.ico" type="image/x-icon">
     <title>Música</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,8 +13,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,600;0,900;1,200;1,900&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/57729d5abd.js" crossorigin="anonymous"></script>
-
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="../main.css">
     <link rel="apple-touch-icon" sizes="57x57" href="../imagenes/favicon3/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="../imagenes/favicon3/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="../imagenes/favicon3/apple-icon-72x72.png">
@@ -35,7 +36,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body style="background-image: url(../imagenes/tomorrowland.jpg);">
+<body>
     <header class="df-header">
         <div class="logo">
             <img src="../imagenes/logosoulmin.jpeg" alt="logo" class="logomin">
@@ -54,63 +55,46 @@
     <main class="min-height">
         <h3 class="titulomain">MUSICA</h3>
         <div class="iframe-musica">
-            <iframe class="iframe-musica" width="80%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+            <iframe class="iframe-musica"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/751486576&color=%2304040a&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-            <div
-                style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                <a href="https://soundcloud.com/nicolasrada" title="Nicolas Rada" target="_blank"
-                    style="color: #cccccc; text-decoration: none;"></a><a
+            <div>
+                <a href="https://soundcloud.com/nicolasrada" title="Nicolas Rada" target="_blank"></a><a
                     href="https://soundcloud.com/nicolasrada/live-at-mute-mar-del-plata-w-nick-warren"
-                    title="Live at The Soundgarden Mute MDQ w Nick Warren 19.01.2020" target="_blank"
-                    style="color: #cccccc; text-decoration: none;"></a>
+                    title="Live at The Soundgarden Mute MDQ w Nick Warren 19.01.2020" target="_blank"></a>
             </div>
-            <iframe class="iframe-musica" width="80%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+            <iframe class="iframe-musica"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/533282253&color=%2304040a&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-            <div
-                style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                <a href="https://soundcloud.com/lostandfoundrec" title="Lost &amp; Found" target="_blank"
-                    style="color: #cccccc; text-decoration: none;"></a> · <a
+            <div>
+                <a href="https://soundcloud.com/lostandfoundrec" title="Lost &amp; Found" target="_blank"></a> · <a
                     href="https://soundcloud.com/lostandfoundrec/eli-nissan-bnp-club-cordoba-12th-october-2018"
-                    title="Eli Nissan @ BNP Club , Cordoba (12th October - 2018)" target="_blank"
-                    style="color: #cccccc; text-decoration: none;"></a>
+                    title="Eli Nissan @ BNP Club , Cordoba (12th October - 2018)" target="_blank"></a>
             </div>
-            <iframe class="iframe-musica" width="80%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+            <iframe class="iframe-musica"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1349652535&color=%2304040a&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-            <div
-                style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                <a href="https://soundcloud.com/when-we-dip" title="When We Dip" target="_blank"
-                    style="color: #cccccc; text-decoration: none;"></a><a
+            <div>
+                <a href="https://soundcloud.com/when-we-dip" title="When We Dip" target="_blank"></a><a
                     href="https://soundcloud.com/when-we-dip/premiere-kasper-koman-locomotif-tantum-remix-lost-found"
-                    title="Premiere: Kasper Koman - Locomotif (Tantum Remix) [Lost &amp; Found]" target="_blank"
-                    style="color: #cccccc; text-decoration: none;"></a>
+                    title="Premiere: Kasper Koman - Locomotif (Tantum Remix) [Lost &amp; Found]" target="_blank"></a>
             </div>
-            <iframe class="iframe-musica" width="80%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+            <iframe class="iframe-musica"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1326217327&color=%2304040a&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-            <div
-                style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                <a href="https://soundcloud.com/balance-series" title="Balance Series" target="_blank"
-                    style="color: #cccccc; text-decoration: none;"></a><a
+            <div>
+                <a href="https://soundcloud.com/balance-series" title="Balance Series" target="_blank"></a><a
                     href="https://soundcloud.com/balance-series/jamie-stevens-gmj-becoming-original-mix"
-                    title="Jamie Stevens &amp; GMJ - Becoming (Original Mix) [PREVIEW]" target="_blank"
-                    style="color: #cccccc; text-decoration: none;"></a>
+                    title="Jamie Stevens &amp; GMJ - Becoming (Original Mix) [PREVIEW]" target="_blank"></a>
             </div>
-            <iframe class="iframe-musica" width="80%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+            <iframe class="iframe-musica"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1349242168&color=%2304040a&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-            <div
-                style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                <a href="https://soundcloud.com/bedrock_rec" title="Bedrock Records" target="_blank"
-                    style="color: #cccccc; text-decoration: none;"></a><a
-                    href="https://soundcloud.com/bedrock_rec/the-alchemist" title="The Alchemist" target="_blank"
-                    style="color: #cccccc; text-decoration: none;"></a>
+            <div>
+                <a href="https://soundcloud.com/bedrock_rec" title="Bedrock Records" target="_blank"></a><a
+                    href="https://soundcloud.com/bedrock_rec/the-alchemist" title="The Alchemist" target="_blank"></a>
             </div>
-            <iframe class="iframe-musica" width="80%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+            <iframe class="iframe-musica"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/766690960&color=%2304040a&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-            <div
-                style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                <a href="https://soundcloud.com/user-22239531" title="Nicolas Raffonaud" target="_blank"
-                    style="color: #cccccc; text-decoration: none;"></a><a
+            <div>
+                <a href="https://soundcloud.com/user-22239531" title="Nicolas Raffonaud" target="_blank"></a><a
                     href="https://soundcloud.com/user-22239531/01-rec-2020-02-25" title="01 REC - 2020 - 02 - 25"
-                    target="_blank" style="color: #cccccc; text-decoration: none;"></a>
+                    target="_blank"></a>
             </div>
         </div>
         <div class="titulomain">
@@ -118,7 +102,6 @@
                 <STRONG>INFORMACION Y CONTACTO</STRONG> <br>
                 Wilde, Avellaneda, CP:1875 <br>
                 Buenos Aires, Argentina
-
             </p>
         </div>
     </main>
@@ -138,7 +121,7 @@
             </a>
         </div>
     </footer>
-
+    <script src="https://kit.fontawesome.com/57729d5abd.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
