--- a/paginas/qsomos.html
+++ b/paginas/qsomos.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../main.css">
     <link rel="shortcut icon" href="../imagenes/favicon3/favicon.ico" type="image/x-icon">
     <title>Quienes Somos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,8 +13,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,600;0,900;1,200;1,900&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/57729d5abd.js" crossorigin="anonymous"></script>
-
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="../main.css">
     <link rel="apple-touch-icon" sizes="57x57" href="../imagenes/favicon3/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="../imagenes/favicon3/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="../imagenes/favicon3/apple-icon-72x72.png">
@@ -35,7 +36,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body style="background-image: url(../imagenes/tomorrowland.jpg);">
+<body>
     <header class="df-header">
         <div class="logo">
             <img src="../imagenes/logosoulmin.jpeg" alt="logo" class="logomin">
@@ -88,7 +89,7 @@
             </a>
         </div>
     </footer>
-
+    <script src="https://kit.fontawesome.com/57729d5abd.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
