--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -33,7 +33,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -81,13 +81,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../imagenes/dj-john-digweed.4_f.jpg" class="d-block w-100" alt="...">
+                        <img src="../imagenes/dj-john-digweed.4_f.jpg" class="d-block w-100 carousel" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../imagenes/Hernan_Cattaneo.jpg" class="d-block w-100" alt="...">
+                        <img src="../imagenes/Hernan_Cattaneo.jpg" class="d-block w-100 carousel" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../imagenes/Nick-Warren-1.jpg" class="d-block w-100" alt="...">
+                        <img src="../imagenes/Nick-Warren-1.jpg" class="d-block w-100 carousel" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
