--- a/paginas/qsomos.html
+++ b/paginas/qsomos.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../imagenes/favicon3/favicon.ico" type="image/x-icon">
     <title>Quienes Somos</title>
+    <!-- USO DE SEO -->
+    <meta name="description" content="Te contamos quienes somos y que nos dedicamos">
+    <meta name="keywords" content="Musica, Produccion, Artistas, Comunidad,">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,13 +33,15 @@
     <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,600;0,900;1,200;1,900&display=swap"
         rel="stylesheet">
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
+
+    <!-- INICIA EL BODY -->
 <body>
+        <!-- INICIA EL HEADER -->
     <header class="df-header">
         <div class="logo">
             <img src="../imagenes/logosoulmin.jpeg" alt="logo" class="logomin">
@@ -52,6 +57,9 @@
             </ul>
         </nav>
     </header>
+        <!-- TERMINA EL HEADER -->
+
+        <!-- INICIA EL MAIN -->
     <main class="min-height">
         <h3 class="titulomain">QUIENES SOMOS</h3>
         <div class="presentacion">
@@ -73,6 +81,9 @@
             </p>
         </div>
     </main>
+        <!-- TERMINA EL MAIN -->
+
+        <!-- INICIA EL FOOTER -->
     <footer class="bg-footer">
         <p class="type-weight">
             <strong>Por <i class="fas fa-bacterium bacteria"></i> Nico Raffonaud</strong>
@@ -89,11 +100,12 @@
             </a>
         </div>
     </footer>
+    <!-- TERMINA EL FOOTER Y METEMOS LOS SCRIPT -->
     <script src="https://kit.fontawesome.com/57729d5abd.js" crossorigin="anonymous"></script>
-    <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
+    </script>
 </body>
+    <!-- TERMINA EL BODY -->
 
 </html>
