optimizando un poco mas

--- a/index.html
+++ b/index.html
@@ -63,15 +63,9 @@
         <h3 class="titulomain">PROXIMOS EVENTOS</h3>
         <p class="titulomain">Estamos preparando cosas increibles, NO TE LO PIERDAS!</p>
         <div class="iframe">
-            <iframe src="https://www.youtube.com/embed/pV7DY-uE-PU" title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/Easqg4SUl2Q" title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/iLsL-8PnDZ0" title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/pV7DY-uE-PU" title="YouTube video player"></iframe>
+            <iframe src="https://www.youtube.com/embed/Easqg4SUl2Q" title="YouTube video player"></iframe>
+            <iframe src="https://www.youtube.com/embed/iLsL-8PnDZ0" title="YouTube video player"></iframe>
         </div>
         <div class="iframesc">
             <iframe scrolling="no" frameborder="no" allow="autoplay" class="iframesc"
