--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -61,7 +61,7 @@
     <main class="min-height">
         <h3 class="titulomain">CONTACTO</h3>
         <div>
-            <form action="" class="formulario-contacto">
+            <form action="/action_page.php" class="formulario-contacto">
                 <label for="nombre" id="nombre">Nombre:</label>
                 <input type="text" name="nombre" placeholder="Escriba..."> <br>
                 <label for="apellido" id="apellido">Apellido:</label>
@@ -107,6 +107,7 @@
     </footer>
         <!-- TERMINA EL FOOTER Y METEMOS LOS SCRIPT -->
     <script src="https://kit.fontawesome.com/57729d5abd.js" crossorigin="anonymous"></script>
+    <!-- POR ACA ME FIGURAN UNOS STYLE QUE YO NO IMPLEMENTO SINO QUE SE IMPLEMENTAN SOLOS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
     </script>
