implementamos uso de mixin y extend y damos los ultimos detalles

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -60,17 +60,17 @@
         <!-- INICIA EL MAIN -->
     <main class="min-height">
         <h3 class="titulomain">CONTACTO</h3>
-        <div>
+        <div class="container">
             <form action="/action_page.php" class="formulario-contacto">
-                <label for="nombre" id="nombre">Nombre:</label>
-                <input type="text" name="nombre" placeholder="Escriba..."> <br>
-                <label for="apellido" id="apellido">Apellido:</label>
-                <input type="text" name="apellido" placeholder="Escriba..."> <br>
-                <label for="telefono">Telefono:</label>
-                <input type="number" name="telefono" placeholder="Escriba..."> <br>
-                <label for="mensaje">Mensaje:</label>
+                <label for="nombre" id="nombre" class="label">Nombre:</label>
+                <input type="text" name="nombre" placeholder="Escriba..." class="input">
+                <label for="apellido" id="apellido" class="label">Apellido:</label>
+                <input type="text" name="apellido" placeholder="Escriba..." class="input">
+                <label for="telefono" class="label">Telefono:</label>
+                <input type="number" name="telefono" placeholder="Escriba..." class="input"> 
+                <label for="mensaje" class="label">Mensaje:</label>
                 <textarea name="mensaje" id="mensaje" cols="30" rows="10"
-                    placeholder="Deje su mensaje aqui, lo contactaremos rapidamente."></textarea> <br>
+                    placeholder="Deje su mensaje aqui, lo contactaremos rapidamente." class="input"></textarea> <br>
                 <input type="button" value="ENVIAR">
             </form>
         </div>
