--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -63,10 +63,10 @@
         <h3 class="titulomain">NOTICIAS</h3>
         <h4 class="titulomain">LES ESTAMOS PREPARANDO TODAS LAS NOVEDADES</h4>
         <div>
-            <p class="noticias-texto">.ESTA SEMANA SEGUNDA PRE-ENTREGA <br> LA SEGUNDA ETAPA DEL
-                PROYECTO FINAL DE
+            <p class="noticias-texto">.FINALIZAMOS EL CURSO <br> ETAPA FINAL DEL
+                PROYECTO DE
                 PROGRAMACION CON HTML Y CSS</p>
-            <p class="noticias-texto">.LA SEMANA ENTRANTE RECIBIREMOS AL PRODCUTOR Y DJ JUAN PABLO NARCISO</p>
+            <p class="noticias-texto">.PRONTO NUEVAS NOTICIAS</p>
         </div>
         <div class="noticias">
             <img class="noticias-1" src="../imagenes/vinilo.jpg" alt="">
